2012-01-09 Thomas Ernst <typo3@thernst.de>
		* [Bug #33074] Wrong check of "adminUsers"-Parameter

2011-12-17 Thomas Ernst <typo3@thernst.de>
        * [Bug #32647] needToLogin form is being displayed, even if registration is not possible
        * [Feature #30523] Deadline for registration more flexible
        * [Bug #32645] Even after the registration period and the event, it is possible to unregister
        * [Bug #32648] Submit buttons showed in list view, even if no events with activated registrations displayed
        * [Feature #32649] Disable displaying of error messages in frontend

2011-12-16 Thomas Ernst <typo3@thernst.de>
        * [Feature #28414] Free places (and other event-specific markers) can be used even if no user is logged in.

2011-11-25 Thomas Ernst <typo3@thernst.de>
        * Compatibility to cal 1.4.x (Classic/Standard template)
        * Services where not working with Typo3 4.6/Cal 1.4.x
        * Updated manuals
        * [Bug #28416] disableUnregister not working in list registration
        * Published Version 0.7.0

2011-11-17 Thomas Ernst	<typo3@thernst.de>
	* Compatibility to Typo3 4.6: Removed usage of deprecated function t3lib_div::GParrayMerged

2011-10-27 Thomas Ernst	<typo3@thernst.de>
	* Finished german manual
	* corrections on english manual
	
2011-09-17 Thomas Ernst	<typo3@thernst.de>
	* Finished english manual
	
2011-02-09 Thomas Ernst	<typo3@thernst.de>
	* [Feature #12861] Compatibility to TYPO3 4.5
	* Corrected several small issues

2011-02-08 Thomas Ernst <typo3@thernst.de>
	* [Feature #12860] Page where userdefined fields are stored should be configurable

2011-01-30 Thomas Ernst <typo3@thernst.de>
	* [Feature #12115] Write new documentation

2011-01-12 Thomas Ernst <typo3@thernst.de>
	* [Feature #11720] templates simplified, static templates split, coding transfered into mvc concept

2010-12-25 Thomas Ernst	<typo3@thernst.de>
	* [Feature #11563] Allow some users to register other users as participants for events