@@ -60,7 +60,7 @@ class tx_register4cal_frontend_hooks {
 
 	function postSearchForObjectMarker($parent, &$content) {
 		//Conditions to display the registration form (first step)
-		if ($parent->conf['view'] == 'event') { /* Single event view ... */
+		if ($parent->conf['view'] == 'event' && $parent->cachedValueArray['tx_register4cal_activate']) { /* Single event view and registration enabled... */
 			// get piVars from tx_cal_controler
 			$data = t3lib_div::_GPmerged('tx_cal_controller');
 			if ($data['uid'] != 0) { /* ...displaying an event ... */
